--- a/index.html
+++ b/index.html
@@ -7,35 +7,35 @@
 <title>Rain's Blog</title>
 <meta name=description content>
 <meta name=author content>
-<link rel=canonical href=https://examplesite.com/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
+<link rel=canonical href=http://intervalrain.github.io/blog/>
+<link crossorigin=anonymous href=/blog/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
 <link rel=preload href=/images/rain.png as=image>
-<link rel=icon href=https://examplesite.com/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=https://examplesite.com/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=https://examplesite.com/favicon-32x32.png>
-<link rel=apple-touch-icon href=https://examplesite.com/apple-touch-icon.png>
-<link rel=mask-icon href=https://examplesite.com/safari-pinned-tab.svg>
+<link rel=icon href=http://intervalrain.github.io/blog/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=http://intervalrain.github.io/blog/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=http://intervalrain.github.io/blog/favicon-32x32.png>
+<link rel=apple-touch-icon href=http://intervalrain.github.io/blog/apple-touch-icon.png>
+<link rel=mask-icon href=http://intervalrain.github.io/blog/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<link rel=alternate type=application/rss+xml href=https://examplesite.com/index.xml>
+<link rel=alternate type=application/rss+xml href=http://intervalrain.github.io/blog/index.xml>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
 </noscript><meta property="og:title" content="Rain's Blog">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://examplesite.com/">
+<meta property="og:url" content="http://intervalrain.github.io/blog/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Rain's Blog">
 <meta name=twitter:description content>
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Rain's Blog","url":"https://examplesite.com/","description":"","thumbnailUrl":"https://examplesite.com/favicon.ico","sameAs":["https://facebook.com/intervalrain","https://instagram.com/intervalrain","https://linkedin.com/in/intervalrain","https://github.com/intervalrain","https://twitter.com/intervalrain","https://www.youtube.com/channel/UCE0Y75__1fPNJGmwbMG0MSA"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Rain's Blog","url":"http://intervalrain.github.io/blog/","description":"","thumbnailUrl":"http://intervalrain.github.io/blog/favicon.ico","sameAs":["https://facebook.com/intervalrain","https://instagram.com/intervalrain","https://linkedin.com/in/intervalrain","https://github.com/intervalrain","https://twitter.com/intervalrain","https://www.youtube.com/channel/UCE0Y75__1fPNJGmwbMG0MSA"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://examplesite.com/ accesskey=h title="Rain's Blog (Alt + H)">Rain's Blog</a>
+<a href=http://intervalrain.github.io/blog/ accesskey=h title="Rain's Blog (Alt + H)">Rain's Blog</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -43,17 +43,17 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://examplesite.com/posts/aboutme title="About me">
+<a href=http://intervalrain.github.io/blog/posts/aboutme title="About me">
 <span>About me</span>
 </a>
 </li>
 <li>
-<a href=https://examplesite.com/categories/ title=Categories>
+<a href=http://intervalrain.github.io/blog/categories/ title=Categories>
 <span>Categories</span>
 </a>
 </li>
 <li>
-<a href=https://examplesite.com/tags/ title=Tags>
+<a href=http://intervalrain.github.io/blog/tags/ title=Tags>
 <span>Tags</span>
 </a>
 </li>
@@ -61,7 +61,7 @@
 </nav>
 </header>
 <main class=main><div class=profile>
-<div class=profile_inner><img src=https://examplesite.com/images/rain.png alt="Is it raining outside?" height=120 width=120>
+<div class=profile_inner><img src=http://intervalrain.github.io/images/rain.png alt="Is it raining outside?" height=120 width=120>
 <h1></h1>
 <span>It&rsquo;s Raining inside</span><div class=social-icons>
 <a href=https://facebook.com/intervalrain target=_blank rel="noopener noreferrer me" title=Facebook><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"/></svg>
@@ -89,7 +89,7 @@
 </div>
 </main>
 <footer class=footer>
-<span>&copy; 2022 <a href=https://examplesite.com/>Rain's Blog</a></span>
+<span>&copy; 2022 <a href=http://intervalrain.github.io/blog/>Rain's Blog</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
