--- a/404.html
+++ b/404.html
@@ -7,13 +7,13 @@
 <meta name=keywords content>
 <meta name=description content>
 <meta name=author content>
-<link rel=canonical href=http://intervalrain.github.io/blog/404.html>
-<link crossorigin=anonymous href=/blog/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
-<link rel=icon href=http://intervalrain.github.io/blog/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=http://intervalrain.github.io/blog/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=http://intervalrain.github.io/blog/favicon-32x32.png>
-<link rel=apple-touch-icon href=http://intervalrain.github.io/blog/apple-touch-icon.png>
-<link rel=mask-icon href=http://intervalrain.github.io/blog/safari-pinned-tab.svg>
+<link rel=canonical href=https://examplesite.com/404.html>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
+<link rel=icon href=https://examplesite.com/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=https://examplesite.com/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=https://examplesite.com/favicon-32x32.png>
+<link rel=apple-touch-icon href=https://examplesite.com/apple-touch-icon.png>
+<link rel=mask-icon href=https://examplesite.com/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <noscript>
@@ -22,7 +22,7 @@
 </noscript><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://intervalrain.github.io/blog/404.html">
+<meta property="og:url" content="https://examplesite.com/404.html">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content>
@@ -32,7 +32,7 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=http://intervalrain.github.io/blog/ accesskey=h title="Rain's Blog (Alt + H)">Rain's Blog</a>
+<a href=https://examplesite.com/ accesskey=h title="Rain's Blog (Alt + H)">Rain's Blog</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -40,17 +40,17 @@
 </div>
 <ul id=menu>
 <li>
-<a href=http://intervalrain.github.io/blog/posts/aboutme title="About me">
+<a href=https://examplesite.com/posts/aboutme title="About me">
 <span>About me</span>
 </a>
 </li>
 <li>
-<a href=http://intervalrain.github.io/blog/categories/ title=Categories>
+<a href=https://examplesite.com/categories/ title=Categories>
 <span>Categories</span>
 </a>
 </li>
 <li>
-<a href=http://intervalrain.github.io/blog/tags/ title=Tags>
+<a href=https://examplesite.com/tags/ title=Tags>
 <span>Tags</span>
 </a>
 </li>
@@ -61,7 +61,7 @@
 <div class=not-found>404</div>
 </main>
 <footer class=footer>
-<span>&copy; 2022 <a href=http://intervalrain.github.io/blog/>Rain's Blog</a></span>
+<span>&copy; 2022 <a href=https://examplesite.com/>Rain's Blog</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
