--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <link rel=alternate type=application/rss+xml href=http://intervalrain.github.io/index.xml>
+<link rel=alternate type=application/json href=http://intervalrain.github.io/index.json>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style><style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style></noscript><meta property="og:title" content="Rain's Blog">
 <meta property="og:description" content>
@@ -48,6 +49,10 @@
 </li><li>
 <a href=http://intervalrain.github.io/tags/ title=Tags>
 <span>Tags</span>
+</a>
+</li><li>
+<a href=http://intervalrain.github.io/search/ title="Search (Alt + /)" accesskey=/>
+<span>Search</span>
 </a>
 </li></ul></nav></header><main class=main><div class=profile>
 <div class=profile_inner><img src=http://intervalrain.github.io/images/rain.png alt="Is it raining outside?" height=120 width=120>
