--- a/search/index.html
+++ b/search/index.html
@@ -7,7 +7,11 @@
 <meta name=description content="search">
 <meta name=author content>
 <link rel=canonical href=http://intervalrain.github.io/search/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style><link crossorigin=anonymous rel=preload as=fetch href=../index.json>
+<meta name=google-site-verification content="XYZabc">
+<meta name=yandex-verification content="XYZabc">
+<meta name=msvalidate.01 content="XYZabc">
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
+<link rel=preload href=/images/rain.png as=image><link crossorigin=anonymous rel=preload as=fetch href=../index.json>
 <script defer crossorigin=anonymous src=/assets/js/search.min.3654f0730d0c89bf2410c85437578c33f77f4ff1252c712f20416945bd171875.js integrity="sha256-NlTwcw0Mib8kEMhUN1eMM/d/T/ElLHEvIEFpRb0XGHU="></script>
 <link rel=icon href=http://intervalrain.github.io/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=http://intervalrain.github.io/favicon-16x16.png>
@@ -31,7 +35,8 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=http://intervalrain.github.io/ accesskey=h title="Rain's Blog (Alt + H)">Rain's Blog</a>
+<a href=http://intervalrain.github.io/ accesskey=h title="Rain's Blog (Alt + H)">
+<img src=http://intervalrain.github.io/images/rain.png alt=logo aria-label=logo height=35>Rain's Blog</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -48,10 +53,6 @@
 </li><li>
 <a href=http://intervalrain.github.io/tags/ title=Tags>
 <span>Tags</span>
-</a>
-</li><li>
-<a href=http://intervalrain.github.io/search/ title="Search (Alt + /)" accesskey=/>
-<span class=active>Search</span>
 </a>
 </li></ul></nav></header><main class=main>
 <header class=page-header>
