--- a/resume/index.html
+++ b/resume/index.html
@@ -48,7 +48,7 @@
             </div>
         
             <div class="about">
-                <span class="position">Introduction: </span>
+                <span class="position">Profile Summary: </span>
                 <span class="desc">
                     I am a device engineer with more than 3 years of experience developing semiconductor processes 
                     and devices especially for embedded High Voltage(eHV) technology, which is based on Logic CMOS processes 
