--- a/resume/index.html
+++ b/resume/index.html
@@ -6,6 +6,6 @@
   <title>Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://www.canva.com/design/DAE7KlVKDUI/c1PkpRW2V8ITacUGFIvUSg/view?utm_content=DAE7KlVKDUI&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://www.canva.com/design/DAE7KlVKDUI/c1PkpRW2V8ITacUGFIvUSg/view?utm_content=DAE7KlVKDUI&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
