--- a/public/creations/index.html
+++ b/public/creations/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Tags | Rain&#39;s Blog</title>
+<title>Creations | Rain&#39;s Blog</title>
 <meta name="keywords" content="" />
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://intervalrain.github.io/tags/" />
+<link rel="canonical" href="https://intervalrain.github.io/creations/" />
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css" integrity="sha256-yIlj/i15RiAA/Q&#43;xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://intervalrain.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://intervalrain.github.io/favicon-16x16.png">
@@ -18,7 +18,7 @@
 <link rel="mask-icon" href="https://intervalrain.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://intervalrain.github.io/tags/index.xml">
+<link rel="alternate" type="application/rss+xml" href="https://intervalrain.github.io/creations/index.xml">
 <noscript>
     <style>
         #theme-toggle,
@@ -105,12 +105,17 @@
             </li>
             <li>
                 <a href="https://intervalrain.github.io/categories/" title="Categories">
-                    <span>Categories</span>
+                    <span class="active">Categories</span>
                 </a>
             </li>
             <li>
                 <a href="https://intervalrain.github.io/tags/" title="Tags">
-                    <span class="active">Tags</span>
+                    <span>Tags</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://intervalrain.github.io/creations/" title="Creations">
+                    <span>Tags</span>
                 </a>
             </li>
         </ul>
@@ -118,7 +123,7 @@
 </header>
 <main class="main">
 <header class="page-header">
-    <h1>Tags</h1>
+    <h1>Creations</h1>
 </header>
 
 <ul class="terms-tags">
