deploy: ac88780cd00e76139d138f5c54691276a3de13e4

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <a class=button href=https://github.com/ rel=noopener title=Github><span class=button-inner>Github</span></a>
 <a class=button href=/tags/hdlbits/ rel=noopener title=HDLBits><span class=button-inner>HDLBits</span></a>
 <a class=button href=/tags/logic-design/ rel=noopener title="Logic Design"><span class=button-inner>Logic Design</span></a>
-<a class=button href=https://github.com/intervalrain/leetcode rel=noopener title=Leetcode><span class=button-inner>Leetcode</span></a>
+<a class=button href=https://github.com/intervalrain/leetcode rel=noopener title=Leetcode(Java)><span class=button-inner>Leetcode(Java)</span></a>
+<a class=button href=https://github.com/intervalrain/Cpp_practice/tree/main/leetcode rel=noopener title=Leetcode(C++)><span class=button-inner>Leetcode(C++)</span></a>
 <a class=button href=/posts/csindex rel=noopener title=CS><span class=button-inner>CS</span></a></div></div></div></main><footer class=footer><span>&copy; 2022 <a href=http://intervalrain.github.io/>Rain's Blog</a></span>
 <span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
