upgrade hugo version

--- a/public/diary/index.html
+++ b/public/diary/index.html
@@ -199,9 +199,8 @@
 今天比昨天早些起床，
 或許是因為心中對自由工作的未知充滿期待。
 中午，我決定去品嚐麻豆最有名的牛肉湯——阿榮牛肉湯。
-湯頭溫潤，牛肉新鮮得仿佛還帶著田野的氣息，
 搭配的肉燥飯，完全不輸專賣店的水準。
-這樣的美味，讓我不禁慶幸自己來到麻豆。
+驚覺我竟想不起過去五六年，在公司餐廳吃過了什麼，
 下午到了星巴克，點了一杯香檸蜜柚冷萃。
 175元的價錢提醒著我，自己似乎已經不再是那個
 可以隨意揮霍的身份了。
@@ -209,13 +208,12 @@
 規劃週末的恆春小旅行，
 完成了記帳的任務，
 還安排了接下來一週的工作計劃。
-這樣的節奏，既輕鬆又充實。
+我想我會慢慢習慣這樣的節奏。
 晚上接了女友一起去吃飯，
 我們最愛的和津壽司卻沒開門，
 於是隨意找了家壽喜燒店。
 在飲料吧，我頑皮地調了一杯芒果冰沙加可樂，
-瞬間被帶回了一中街多多茶坊的日子，
-那份懷舊感讓我忍不住微笑。
+瞬間被帶回了一中街多多茶坊的日子。
 飯後，我們去了 Costco。
 正逢 Black Friday，裡頭人山人海。
 女友見到折扣標籤，興奮得像孩子一樣，
@@ -225,7 +223,6 @@
 臨走時，她看到食品區有開心果霜淇淋，
 堅持要買一杯分享給我，
 才發現原來小時候過年吃的那種瓜子的味道，
-竟然能被做成冰淇淋，頗為有趣。
 今天的 Leetcode 題目很應景，
 正值 Premier 12 中華隊奪冠，
 題目叫做 “Find Champion II”。
