--- a/leetcode/2/index.html
+++ b/leetcode/2/index.html
@@ -75,7 +75,7 @@ Example 2:"><script type=application/ld+json>{"@context":"https://schema.org","@
 </span></span><span style=display:flex><span>    }
 </span></span><span style=display:flex><span>    <span style=color:#66d9ef>return</span> dummy<span style=color:#f92672>-&gt;</span>next;     <span style=color:#75715e>// 記得回傳的是 sentinel-&gt;next
 </span></span></span><span style=display:flex><span><span style=color:#75715e></span>}
-</span></span></code></pre></div><p><a href=/leetcode>回目錄 Catalog</a></p></div><footer class=post-footer><ul class=post-tags><li><a href=https://intervalrain.github.io/tags/leetcode/>Leetcode</a></li></ul><nav class=paginav><a class=prev href=https://intervalrain.github.io/leetcode/1/><span class=title>« 上一頁</span><br><span>[LeetCode] 1. Two Sum</span>
+</span></span></code></pre></div><p><a href=/leetcode>回目錄 Catalog</a></p></div><footer class=post-footer><ul class=post-tags><li><a href=https://intervalrain.github.io/tags/leetcode/>Leetcode</a></li></ul><nav class=paginav><a class=prev href=https://intervalrain.github.io/leetcode_list/sliding_window_dblptr/1297/><span class=title>« 上一頁</span><br><span>[LeetCode] 1297. Maximum Number of Occurrences of a Substring</span>
 </a><a class=next href=https://intervalrain.github.io/leetcode/3/><span class=title>下一頁 »</span><br><span>[LeetCode] 3. Longest Substring Without Repeating Characters</span></a></nav></footer><script src=https://utteranc.es/client.js repo=Reid00/hugo-blog-talks issue-term=pathname label=Comment theme=github-light crossorigin=anonymous async></script></article></main><footer class=footer><span>&copy; 2024 <a href=https://intervalrain.github.io/>Rain Hu's Workspace</a></span> ·
 <span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
