--- a/leetcode/766/index.html
+++ b/leetcode/766/index.html
@@ -84,7 +84,7 @@ Example 2:
 </span></span><span style=display:flex><span>    }
 </span></span><span style=display:flex><span>    <span style=color:#66d9ef>return</span> true;
 </span></span><span style=display:flex><span>}
-</span></span></code></pre></div><p><a href=/leetcode>回目錄 Catalog</a></p></div><footer class=post-footer><ul class=post-tags><li><a href=https://intervalrain.github.io/tags/leetcode/>Leetcode</a></li></ul><nav class=paginav><a class=prev href=https://intervalrain.github.io/leetcode/19/><span class=title>« 上一頁</span><br><span>[LeetCode] 19. Remove Nth Node From End of List</span>
+</span></span></code></pre></div><p><a href=/leetcode>回目錄 Catalog</a></p></div><footer class=post-footer><ul class=post-tags><li><a href=https://intervalrain.github.io/tags/leetcode/>Leetcode</a></li></ul><nav class=paginav><a class=prev href=https://intervalrain.github.io/leetcode_list/sliding_window_dblptr/1016/><span class=title>« 上一頁</span><br><span>[LeetCode] 1016. Binary String With Substrings Representing 1 To N</span>
 </a><a class=next href=https://intervalrain.github.io/leetcode/1706/><span class=title>下一頁 »</span><br><span>[LeetCode] 1706. Where Will the Ball Fall</span></a></nav></footer><script src=https://utteranc.es/client.js repo=Reid00/hugo-blog-talks issue-term=pathname label=Comment theme=github-light crossorigin=anonymous async></script></article></main><footer class=footer><span>&copy; 2025 <a href=https://intervalrain.github.io/>Rain Hu's Workspace</a></span> ·
 <span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
