--- a/leetcode/20/index.html
+++ b/leetcode/20/index.html
@@ -43,7 +43,7 @@ Example 1:"><script type=application/ld+json>{"@context":"https://schema.org","@
 </span></span><span style=display:flex><span>    }
 </span></span><span style=display:flex><span>    <span style=color:#66d9ef>return</span> st.empty();  <span style=color:#75715e>// 檢查 stack 是否為空
 </span></span></span><span style=display:flex><span><span style=color:#75715e></span>}
-</span></span></code></pre></div><p><a href=/leetcode>回目錄 Catalog</a></p></div><footer class=post-footer><ul class=post-tags><li><a href=https://intervalrain.github.io/tags/leetcode/>Leetcode</a></li></ul><nav class=paginav><a class=prev href=https://intervalrain.github.io/leetcode_list/sliding_window_dblptr/2958/><span class=title>« 上一頁</span><br><span>[LeetCode] 1695. Maximum Erasure Value</span>
+</span></span></code></pre></div><p><a href=/leetcode>回目錄 Catalog</a></p></div><footer class=post-footer><ul class=post-tags><li><a href=https://intervalrain.github.io/tags/leetcode/>Leetcode</a></li></ul><nav class=paginav><a class=prev href=https://intervalrain.github.io/leetcode_list/sliding_window_dblptr/2779/><span class=title>« 上一頁</span><br><span>[LeetCode] 2779. Maximum Beauty of an Array After Applying Operation</span>
 </a><a class=next href=https://intervalrain.github.io/leetcode/433/><span class=title>下一頁 »</span><br><span>[LeetCode] 433. Minimum Genetic Mutation</span></a></nav></footer><script src=https://utteranc.es/client.js repo=Reid00/hugo-blog-talks issue-term=pathname label=Comment theme=github-light crossorigin=anonymous async></script></article></main><footer class=footer><span>&copy; 2025 <a href=https://intervalrain.github.io/>Rain Hu's Workspace</a></span> ·
 <span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
